fix: prevent squished icons

--- a/sass/assets/css/arcane/components/_apache.scss
+++ b/sass/assets/css/arcane/components/_apache.scss
@@ -2,4 +2,5 @@ img.apache {
   border-radius: 0;
   height: 22px;
   margin-bottom: 0;
+  min-width: max-content;
 }
